fixed page not scrolling by adding overflow:auto to wrapper div

--- a/listifyFrontend/style.css
+++ b/listifyFrontend/style.css
@@ -593,6 +593,7 @@ button{
   position:fixed;
   width:100vw;
   height:100vh;
+  overflow:auto;
 }
 .dimScreen{
   -webkit-filter: blur(4px) brightness(50%);
